# generative-ai-for-beginners

./: pyproject.toml
