[tool.poetry]
name = "generative-ai-for-beginners"
version = "0.1.0"
description = ""
authors = ["Mathieu Leduc-Hamel <mathieu.leduc-hamel@nasdaq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipywidgets = "7.7.1"
matplotlib = "3.7.0"
numpy = "1.24.2"
pandas = "1.5.3"
tqdm = "4.64.0"
python-dotenv = "1.0.0"
openai = ">=0.28.0"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
